@@ -42,8 +42,8 @@ Description: metapackage for the BOINC client and the manager
 
 Package: libboinc7
 Provides: libboinc
+Breaks: libboinc (<= 7.0.34+dfsg-1)
 Replaces: libboinc (<= 7.0.34+dfsg-1)
-Conflicts: libboinc (<= 7.0.34+dfsg-1)
 Architecture: any
 Section: libs
 Depends: ${shlibs:Depends}, ${misc:Depends}
@@ -210,7 +210,8 @@ Depends: ${misc:Depends},
  libboinc-app7 (<< ${source:Version}+1~),
  libc6-dev | libc-dev,
  libstdc++6-4.3-dev | libstdc++-dev, libssl-dev, libmysqlclient-dev
-Conflicts: boinc-dev (<= 7.0.28+dfsg-2)
+Breaks: boinc-dev (<= 7.0.28+dfsg-2)
+Replaces: boinc-dev (<= 7.0.28+dfsg-2)
 Description: development files to build applications for BOINC projects
  The Berkeley Open Infrastructure for Network Computing (BOINC) is a
  software platform for distributed computing using volunteered computer
@@ -222,8 +223,9 @@ Description: development files to build applications for BOINC projects
 
 Package: libboinc-app7
 Provides: libboinc-app
-Replaces: libboinc-app (<= 7.0.34+dfsg-1)
-Conflicts: libboinc-app (<= 7.0.34+dfsg-1),
+Breaks: libboinc-app (<= 7.0.34+dfsg-1),
+ boinc-dev (<= 7.0.28+dfsg-2)
+Replaces: libboinc-app (<= 7.0.34+dfsg-1),
  boinc-dev (<= 7.0.28+dfsg-2)
 Section: libs
 Architecture: any
