@@ -1,7 +1,10 @@
 boinc (7.0.36+dfsg-2) UNRELEASED; urgency=low
 
   [ Guo Yixuan ]
-  * debian/control: Removed the deprecated DMUA field.
+  * debian/control:
+    - Removed the deprecated DMUA field.
+    - Use Breaks plus Replaces for moving files from boinc-dev
+      to libboinc*.
   * debian/patches:
     - Removed some old patches (those not in series anymore).
     - Refreshed cppcheck_avoid_redundant_check.patch.
